--- a/ToyProject/src/main/resources/templates/fragments/header.html
+++ b/ToyProject/src/main/resources/templates/fragments/header.html
@@ -3,7 +3,7 @@
     <header th:fragment="headerFragment">
       <div class="ui stackable menu">
         <div class="item">
-          <img src="/images/logo.png">
+          <img src="https://www.thymeleaf.org/images/thymeleaf.png">
         </div>
         <a class="item">Features</a>
         <a class="item">Testimonials</a>
