--- a/ToyProject/src/main/resources/templates/thymeleaf/index.html
+++ b/ToyProject/src/main/resources/templates/thymeleaf/index.html
@@ -14,7 +14,7 @@
 
 
         <div style="float: right">
-        <input type='button' onClick="location.href='/user/create'" id="button2" value='create'/>
+        <input type='button' onClick="location.href='/user/form'" id="button2" value='create'/>
         <input type='button' onClick="location.href='/user/login'" id="button1" value='login'/>
         </div>
 
