--- a/ToyProject/src/main/resources/templates/fragments/config.html
+++ b/ToyProject/src/main/resources/templates/fragments/config.html
@@ -4,13 +4,13 @@
     <th:block th:fragment="configFragment">
 
         <link rel="stylesheet" type="text/css" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css}">
-        <link rel="stylesheet" type="text/css" th:href="@{/static/css/common.css}">
+        <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}">
 
         <th:block layout:fragment="css"></th:block>
 
         <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
         <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js}"></script>
-        <script th:src="@{/static/js/common.js}"></script>
+        <script th:src="@{/js/common.js}"></script>
         
         <th:block layout:fragment="script"></th:block>
         
