--- a/ToyProject/src/main/resources/templates/fragments/header.html
+++ b/ToyProject/src/main/resources/templates/fragments/header.html
@@ -3,8 +3,11 @@
     <header th:fragment="headerFragment">
       <div class="ui stackable menu">
         <div class="item">
-          <img src="/images/logo.png">
+          <!-- <img class="" src="/images/logo.png"> -->
         </div>
+        <a class="item" onclick="openSidebar()">
+          <span class="openSidebar">사이드바</span>
+        </a>
         <a class="item">Features</a>
         <a class="item">Testimonials</a>
         <a class="item">Sign-in</a>
