--- a/ToyProject/src/main/resources/templates/index.html
+++ b/ToyProject/src/main/resources/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="layout/default">
-
+<html xmlns:th="http://www.thymeleaf.org" layout:decorator="layout/default" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<!-- xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="layout/default" -->
 <div layout:fragment="content">
 
     <div style="border: 1px solid red">
-        index.html 입니다.
+        main.html 입니다.
     </div>
 
 </div>
