--- a/ToyProject/src/main/resources/templates/layout/default.html
+++ b/ToyProject/src/main/resources/templates/layout/default.html
@@ -3,10 +3,20 @@
 
 <head th:replace="fragments/config :: configFragment"></head>
 
-<header th:replace="fragments/header :: headerFragment"></header>
+<div id="wrapper">
 
-<div layout:fragment="content"></div>
+    <div th:replace="fragments/sidebar :: sidebarFragment"></div>
 
-<footer th:replace="fragments/footer :: footerFragment"></footer>
+    <div id="content">
+
+        <header th:replace="fragments/header :: headerFragment"></header>
+        
+        <div layout:fragment="content"></div>
+        
+        <footer th:replace="fragments/footer :: footerFragment"></footer>
+
+    </div>
+
+</div>
 
 </html>
