--- a/ToyProject/src/main/resources/templates/layout/default.html
+++ b/ToyProject/src/main/resources/templates/layout/default.html
@@ -3,20 +3,17 @@
 
 <head th:replace="fragments/config :: configFragment"></head>
 
+<body>
 <div id="wrapper">
-
-    <div th:replace="fragments/sidebar :: sidebarFragment"></div>
-
-    <div id="content">
-
-        <header th:replace="fragments/header :: headerFragment"></header>
+    
+    <header class="ui top fixed menu"th:replace="fragments/header :: headerFragment"></header>
+                
+    <div layout:fragment="content" class="ui main text container"></div>
+    
+    <footer class="ui bottom fixed menu" th:replace="fragments/footer :: footerFragment"></footer>
+                
+                
         
-        <div layout:fragment="content"></div>
-        
-        <footer th:replace="fragments/footer :: footerFragment"></footer>
-
-    </div>
-
-</div>
-
+</div><!-- end of wrapper -->
+</body>    
 </html>
