--- a/ToyProject/src/main/resources/templates/fragments/header.html
+++ b/ToyProject/src/main/resources/templates/fragments/header.html
@@ -5,16 +5,9 @@
         <div class="item">
           <!-- <img class="" src="/images/logo.png"> -->
         </div>
-        <a class="item" onclick="openSidebar()">
-          <span class="openSidebar">사이드바</span>
-        </a>
-        <a class="item">국내도서</a>
+        <a class="item">Features</a>
         <a class="item">Testimonials</a>
         <a class="item">Sign-in</a>
       </div>
     </header>
-    
 </html>
-
-
-
