--- a/ToyProject/src/main/resources/templates/user/login.html
+++ b/ToyProject/src/main/resources/templates/user/login.html
@@ -30,7 +30,8 @@
         <div class="field">
           <div class="ui left icon input">
             <i class="user icon"></i>
-            <input type="text" name="id" id="id-form" placeholder="id">
+            <input type="text" name="id" id="id-form" placeholder="id" style="width:auto">
+            <div class="ui fluid large teal submit button" style="width:50%" onclick="idCheck()" id="break">idcheck</div>
           </div>
         </div>
         <div class="field">
@@ -39,7 +40,7 @@
             <input type="password" name="password" id="pw-form" placeholder="Password">
           </div>
         </div>
-        <div class="ui fluid large teal submit button"  onclick="abc()" id="break">Login</div>
+        
       </div>
 
       <div class="ui error message"></div>
@@ -47,7 +48,7 @@
     </form>
 
     <div class="ui message">
-      New to us? <a href="#">Sign Up</a>
+      New to us? <a href="/user/form">Sign Up</a>
     </div>
   </div>
 </div>
@@ -55,7 +56,7 @@
 </body>
 <script>
 
-function abc(){
+function idCheck(){
 var id=$('#id-form').val();
 var pw=$('#pw-form').val();
   
@@ -67,7 +68,7 @@ $.ajax({
         url: "/user/selectuser",
         type: 'POST',
         success: function(data) {
-          alert("로그인 정보 전송완료")
+          
 
 					
 				
