TestSpringSecurity 코드 작성

--- a/ToyProject/src/main/resources/templates/user/login.html
+++ b/ToyProject/src/main/resources/templates/user/login.html
@@ -49,6 +49,17 @@
 
     <div class="ui message">
       New to us? <a href="/user/form">Sign Up</a>
+      <a href="https://accounts.google.com/o/oauth2/v2/auth?
+      scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcalendar.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcalendar&
+      access_type=offline&include_granted_scopes=true&state=state_parameter_passthrough_value&
+      redirect_uri=http://localhost:8080/reciveCode
+      &response_type=code
+      &client_id=191148106743-f8jfi77koujkht5t95at0gg36149p9jg.apps.googleusercontent.com">구글 API를 사용할 수 있도록 허용하러 가기</a>
+  </body>
+</html>
+
+
+
     </div>
   </div>
 </div>
