--- a/ToyProject/src/main/resources/templates/fragments/header.html
+++ b/ToyProject/src/main/resources/templates/fragments/header.html
@@ -1,13 +1,66 @@
 <!DOCTYPE html>
 <html lagn="ko" xmlns:th="http://www.thymeleaf.org">
     <header th:fragment="headerFragment">
-      <div class="ui stackable menu">
+      <!-- <div class="ui stackable menu">
         <div class="item">
-          <!-- <img class="" src="/images/logo.png"> -->
+         
         </div>
         <a class="item">Features</a>
         <a class="item">Testimonials</a>
         <a class="item">Sign-in</a>
+      </div> -->
+
+      <div class="ui menu">
+        <a class="browse item">
+          국내소설
+          <i class="dropdown icon"></i>
+        </a>
+        <div class="ui fluid popup bottom left transition hidden" style="top: 554px; left: 1px; bottom: auto; right: auto; width: 960px;">
+           <div class="ui four column relaxed divided grid">
+            <!-- <div class="column">
+              <h4 class="ui header">Fabrics</h4>
+              <div class="ui link list">
+                <a class="item">Cashmere</a>
+                <a class="item">Linen</a>
+                <a class="item">Cotton</a>
+                <a class="item">Viscose</a>
+              </div>
+            </div>
+            <div class="column">
+              <h4 class="ui header">Size</h4>
+              <div class="ui link list">
+                <a class="item">Small</a>
+                <a class="item">Medium</a>
+                <a class="item">Large</a>
+                <a class="item">Plus Sizes</a>
+              </div>
+            </div>
+            <div class="column">
+              <h4 class="ui header">Colors</h4>
+              <div class="ui link list">
+                <a class="item">Neutrals</a>
+                <a class="item">Brights</a>
+                <a class="item">Pastels</a>
+              </div>
+            </div>
+            <div class="column">
+              <h4 class="ui header">Types</h4>
+              <div class="ui link list">
+                <a class="item">Knitwear</a>
+                <a class="item">Outerwear</a>
+                <a class="item">Pants</a>
+                <a class="item">Shoes</a>
+              </div>
+            </div> -->
+          </div> 
+        </div>
+        <a class="item">
+          <i class="cart icon"></i>
+          Checkout
+        </a>
       </div>
+
+      <script th:src="@{/js/header.js}"></script>
+
     </header>
 </html>
