--- a/ToyProject/src/main/resources/templates/fragments/header.html
+++ b/ToyProject/src/main/resources/templates/fragments/header.html
@@ -11,11 +11,14 @@
       </div> -->
 
       <div class="ui menu">
+        <a class="item" href="/">
+          HOME
+        </a>
         <a class="browse item">
           국내소설
           <i class="dropdown icon"></i>
         </a>
-        <div class="ui fluid popup bottom left transition hidden" style="top: 554px; left: 1px; bottom: auto; right: auto; width: 960px;">
+        <div class="ui fluid popup bottom left transition hidden" style="top: 554px; left: auto; bottom: auto; right: auto; width: 200px;">
            <div class="ui four column relaxed divided grid">
             <!-- <div class="column">
               <h4 class="ui header">Fabrics</h4>
