--- a/ToyProject/src/main/resources/templates/layout/default.html
+++ b/ToyProject/src/main/resources/templates/layout/default.html
@@ -8,7 +8,8 @@
     
     <header class="ui top fixed menu"th:replace="fragments/header :: headerFragment"></header>
                 
-    <div layout:fragment="content" class="ui main text container"></div>
+    <div layout:fragment="content" class="ui main text container">
+    </div>
     
     <footer class="ui bottom fixed menu" th:replace="fragments/footer :: footerFragment"></footer>
                 
