--- a/ToyProject/src/main/resources/templates/index.html
+++ b/ToyProject/src/main/resources/templates/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    ddd
-</body>
+<html xmlns:th="http://www.thymeleaf.org" layout:decorator="layout/default" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+
+<div layout:fragment="content">
+    <script th:src="@{/js/index/index.js}"></script>
+    <div style="border: 1px solid red">
+    main.html 입니다.
+        <div>
+            <button onclick="test()">
+                test
+            </button>
+        </div>
+    </div>
+</div>
 </html>
