#시큐리티 재설정

--- a/ToyProject/src/main/resources/templates/index.html
+++ b/ToyProject/src/main/resources/templates/index.html
@@ -18,6 +18,10 @@
         <input type='button' onClick="location.href='/user/login'" id="button1" value='login'/>
         </div>
 
+        <h1>Welcome!</h1>
+
+        <p>Click <a th:href="@{/hello}">here</a> to see a greeting.</p>
+
 
     </div>
 
