--- a/ToyProject/src/main/resources/templates/index.html
+++ b/ToyProject/src/main/resources/templates/index.html
@@ -9,6 +9,10 @@
             <button onclick="test()">
                 test
             </button>
+
+            <button onclick="login()">
+                Login
+            </button>
         </div>
     </div>
 </div>
