--- a/ToyProject/src/main/resources/templates/user/loginUser.html
+++ b/ToyProject/src/main/resources/templates/user/loginUser.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" layout:decorator="layout/default" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <div layout:fragment="content">
-    
+    <div class="">
+        Login 화면
+    </div>
 </div>
 </html>
