--- a/ToyProject/src/main/resources/templates/fragments/header.html
+++ b/ToyProject/src/main/resources/templates/fragments/header.html
@@ -7,7 +7,8 @@
         </div>
         <a class="item">Features</a>
         <a class="item">Testimonials</a>
-        <a class="item">Sign-in</a>
+        <a class="item" onclick="fnSignIn()">Sign-in</a>
+        <a class="item" onclick="fnSignUp()">Sign-up</a>
       </div>
     </header>
 </html>
