Revert "commit/ push"
This reverts commit 54106cd466d005c13b71cab88ec8e9cbf02671c3.

--- a/ToyProject/src/main/resources/templates/index.html
+++ b/ToyProject/src/main/resources/templates/index.html
@@ -10,21 +10,17 @@
 <div layout:fragment="content">
 
     <div style="border:1px solid red; height: 500px; font-size: 40px; text-align: center; padding:50px">
-       
+        index.html
 
-<!--
+
         <div style="float: right">
         <input type='button' onClick="location.href='/user/form'" id="button2" value='create'/>
         <input type='button' onClick="location.href='/user/login'" id="button1" value='login'/>
         </div>
--->
 
+        <h1>Welcome!</h1>
 
-
-        
-
-        <p>로그인 하고들어오세요. <a th:href="@{/product/productList}">Product</a> 
-        <p>아이디 만들기 <a th:href="@{/create}">Create</a> 
+        <p>Click <a th:href="@{/hello}">here</a> to see a greeting.</p>
 
 
     </div>
