--- a/ToyProject/src/main/resources/templates/layout/default.html
+++ b/ToyProject/src/main/resources/templates/layout/default.html
@@ -11,7 +11,7 @@
     <div layout:fragment="content" class="ui main text container">
     </div>
     
-    <footer class="ui bottom fixed menu" th:replace="fragments/footer :: footerFragment"></footer>
+    <!-- <footer class="ui bottom fixed menu" th:replace="fragments/footer :: footerFragment"></footer> -->
                 
                 
         
