--- a/ToyProject/src/main/resources/templates/user/userCreate.html
+++ b/ToyProject/src/main/resources/templates/user/userCreate.html
@@ -64,8 +64,8 @@ function abc(){
 
   $.ajax({
 				data: {
-					USER_ID: id,
-					PASSWORD: pw
+					username: id,
+					password: pw
 				},
         url: "/user/createuser",
         type: 'GET',
