--- a/ToyProject/src/main/resources/templates/product/productList.html
+++ b/ToyProject/src/main/resources/templates/product/productList.html
@@ -31,6 +31,7 @@
         </a>
         </div>
         <div class="pusher" >
+
            <button id="menu" class="ui button">Menu</button>
             상품
             <br>
@@ -38,9 +39,32 @@
             
             <span th:text="${session.userId}" style="color: brown; font-size: 20px;" ></span> <span style="font-size: 20px;">님 안녕하세요^^</span> 
             
-            
-            <button id="menu" class="logout">로그아웃</button>
-           
+            <div class="ui card" style="margin:30px;">
+                <div class="content">
+                  <div class="right floated meta">14h</div>
+                  <img class="ui avatar image" style="width: 200px; height:200px"src="/images/a.jpg"> Elliot
+                </div>
+                <div class="image">
+                  <img>
+                </div>
+                <div class="content">
+                  <span class="right floated">
+                    <i class="heart outline like icon"></i>
+                    17 likes
+                  </span>
+                  <i class="comment icon"></i>
+                  3 comments
+                </div>
+                <div class="extra content">
+                  <div class="ui large transparent left icon input">
+                    <i class="heart outline icon"></i>
+                    <input type="text" placeholder="Add Comment...">
+                  </div>
+                </div>
+              </div>
+          
+        
+          
 
           
 
